// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.config.v1;

import "proto/config/v1/auth.proto";

option go_package = "github.com/mcpany/core/proto/config/v1";
option java_outer_classname = "UserProto";

message User {
  // The unique ID of the user (UUID or Username).
  string id = 1 [json_name = "id"];
  // The authentication configuration for the user.
  AuthenticationConfig authentication = 2 [json_name = "authentication"];
  // The list of profile IDs this user has access to.
  repeated string profile_ids = 3 [json_name = "profile_ids"];
  // The list of roles assigned to the user.
  repeated string roles = 4 [json_name = "roles"];
}
